# el_farol_simulation

./: .gitattributes  .gitignore  Cargo.toml  README copy.md  README.md  SPECIFICATION.md  generate_readme.py
el_farol_sim/: .env_template  .gitattributes  .gitignore  Cargo.toml  README.md  simulation_data.bin.xz  vid.sh
el_farol_sim/src/: agent.rs  game.rs  lib.rs  main.rs  policy.rs  simulation.rs  visualization.rs
el_farol_sim/src/agent/: mod.rs
el_farol_sim/src/game/: mod.rs
el_farol_sim/src/policy/: mod.rs
el_farol_sim/src/simulation/: mod.rs
el_farol_sim/src/simulation_logic/: agent.rs  game.rs  mod.rs  policy.rs  simulation.rs
results/: results.md
simulations/: all-policies-200_2025-06-06_17-00-35.bin.xz  better-retention-rate-mechanism_2025-06-08_13-01-59.bin.xz  discrete_payoff_matrix_many_strategies_deterministic_no_random_2025-06-22_11-46-48.bin.xz  discrete_payoff_matrix_only_always_go_never_go_deterministic_2025-06-22_11-29-56.bin.xz  oneround-all-non-random_2025-06-06_17-45-32.bin.xz  retention_rate_0.05_2025-06-06_17-57-32.bin.xz  test_simulation.bin.xz
src/: main.rs
