[package]
name = "el_farol_sim"
version = "0.1.0"
edition = "2021"
authors = ["Your Name <your.email@example.com>"]
description = "A simulation of the El Farol Bar problem in a grid-based environment"

[dependencies]
rand = "0.8.5"
ndarray = "0.15.6"
plotters = "0.3.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
log = "0.4"
env_logger = "0.10"
thiserror = "1.0"
anyhow = "1.0"
rayon = "1.8"  # For parallel processing

[dev-dependencies]
criterion = "0.5"
proptest = "1.3"
