[package]
name = "el_farol_sim"
version = "0.1.0"
edition = "2021"
authors = ["Your Name <your.email@example.com>"]
description = "A simulation of the El Farol Bar problem in a grid-based environment"

[lib]
name = "el_farol_lib"
path = "src/lib.rs"

[[bin]]
name = "simulation"
path = "src/bin/simulation.rs"

[[bin]]
name = "visualizer"
path = "src/bin/visualizer.rs"

[dependencies]
rand = "0.8.5"
ndarray = { version = "0.15.6", features = ["serde"] }
plotters = "0.3.5"
image = { version = "0.25.1", features = ["png"] }
imageproc = "0.25.0"
rusttype = "0.9.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3.3"
log = "0.4"
env_logger = "0.11.3"
thiserror = "1.0"
anyhow = "1.0"
rayon = "1.8"  # For parallel processing
indicatif = "0.17.8"
clap = { version = "4.5.4", features = ["derive"] }
chrono = "0.4.38"
liblzma = { version = "0.4.1", features = ["num_cpus", "parallel"] }
toml = "0.8.12"
ab_glyph = "0.2.22"
dotenvy = "0.15.7"

[dev-dependencies]
criterion = "0.5.1"
proptest = "1.3"
